<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/songle_menu_bg"
    tools:context="com.edu.s1572691.songle.songle.MenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/songle_icon" />

    <Button
        android:id="@+id/goToMap"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tutorialButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="47dp"
        android:layout_marginStart="24dp"
        android:background="@android:color/holo_orange_light"
        android:text="Play"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="250dp" />

    <Button
        android:id="@+id/tutorialButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/goToMap"
        android:layout_marginBottom="68dp"
        android:background="@android:color/holo_orange_light"
        android:text="How to Play"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="366dp" />

    <Button
        android:id="@+id/toSongs"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/goToMap"
        android:layout_marginEnd="24dp"
        android:background="@android:color/holo_orange_light"
        android:text="Songs"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="250dp" />

    <Button
        android:id="@+id/achievements"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tutorialButton"
        android:layout_alignBottom="@+id/tutorialButton"
        android:layout_alignStart="@+id/toSongs"
        android:background="@android:color/holo_orange_light"
        android:text="Achievements"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="366dp" />

    <TextView
        android:id="@+id/songleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:alpha="0.9"
        android:layout_marginTop="24dp"
        android:fontFamily="Calibri"
        android:text="Welcome to Songle!"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="26sp"
        android:textStyle="bold" />
</RelativeLayout>
