<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:background="@drawable/custom_border"
    android:id="@+id/guessBg"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/guessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="164dp"
        android:textColor="@android:color/black"
        android:fontFamily="Calibri"
        android:textStyle="bold"
        android:textSize="23dp"
        android:text="Enter your guess: " />

    <EditText
        android:id="@+id/enterGuessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guessText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/guessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterGuessText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="onGuessButtonClick"
        android:text="Enter" />
</RelativeLayout>