<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/song_words_bg"
    android:layout_height="match_parent"
    tools:context="com.edu.s1572691.songle.songle.SongWordsActivity">

    <EditText
        android:id="@+id/wordTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@+id/guessSong"
        android:layout_marginBottom="70dp"
        android:background="@android:color/white"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textMultiLine"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <Button
        android:id="@+id/guessSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"
        android:layout_marginStart="57dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="popUpTheGuess"
        android:text="Guess" />

    <Button
        android:id="@+id/listenToSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/guessSong"
        android:layout_alignBottom="@+id/guessSong"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="65dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="showHint"
        android:text="Hint" />
</RelativeLayout>
