<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/songle_songlist_bg"
    android:layout_height="match_parent"
    tools:context="com.edu.s1572691.songle.songle.SongList">

    <ListView
        android:id="@+id/songList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />
</RelativeLayout>
